@@ -1,3 +1,11 @@
+2009-11-03  Corinna Vinschen  <corinna@vinschen.de>
+
+	* security.cc (alloc_sd): Re-introduce setting the SE_DACL_PROTECTED
+	flag.  Remove INHERITED_ACE flag from all inherited ACEs.  Add comment.
+	Fix ace_off counter in unrelated ACE loop.
+	* wincap.cc: Re-add has_dacl_protect throughout.
+	* wincap.h: Ditto.
+
 2009-11-02  Corinna Vinschen  <corinna@vinschen.de>
 
 	* security.cc (alloc_sd): Re-enable generating default permission
@@ -21,7 +29,7 @@
 	(sys_cp_wcstombs): Make UNICODE private use area conversion roundtrip
 	save for all characters.
 	(sys_cp_mbstowcs): Ditto, by removing special case for UTF-8 sequences
-	representing U+f0XX UNICODE chars.  Fix typo in comment.
+	representing U+F0xx UNICODE chars.  Fix typo in comment.
 
 2009-11-02  Corinna Vinschen  <corinna@vinschen.de>
 
